// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optic ruleset upload can publish a ruleset 1`] = `
"Successfully uploaded the ruleset @orgslug/ruleset-name
You can start using this ruleset by adding the ruleset @orgslug/ruleset-name in your optic.dev.yml or standards file.
"
`;

exports[`optic ruleset upload exits if ruleset file does not have rulesConstructor 1`] = `
"Rules file does not export a rulesetConstructor that is a function
Rules file does not match expected format. Expected ruleset file to have a default export with the shape
{
  name: string;
  description: string;
  configSchema?: any;
  rulesetConstructor: (config: ConfigSchema) => Ruleset;
}
"
`;

exports[`optic ruleset upload exits if ruleset file shape is not valid 1`] = `
"Rule file is invalid:
data/default must have required property 'description'
Rules file does not match expected format. Expected ruleset file to have a default export with the shape
{
  name: string;
  description: string;
  configSchema?: any;
  rulesetConstructor: (config: ConfigSchema) => Ruleset;
}
"
`;
